Bug 153543 - shell constant vbMinimizedFocus shows syntax error
Summary: shell constant vbMinimizedFocus shows syntax error
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: BASIC (show other bugs)
Version:
(earliest affected)
7.0.0.3 release
Hardware: All All
: medium normal
Assignee: Andreas Heinisch
URL:
Whiteboard: target:7.6.0 target:7.5.4
Keywords:
Depends on:
Blocks: Macro-VBA
  Show dependency treegraph
 
Reported: 2023-02-11 07:26 UTC by johnks
Modified: 2023-05-09 14:15 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
screenshot of bug (190.63 KB, image/png)
2023-02-11 07:26 UTC, johnks
Details
zip contaning file (681.75 KB, application/zip)
2023-02-11 07:27 UTC, johnks
Details

Note You need to log in before you can comment on or make changes to this bug.
Description johnks 2023-02-11 07:26:14 UTC
Description:
https://learn.microsoft.com/en-us/office/vba/language/reference/user-interface-help/shell-constants

it appears that vbMinimizedFocus is not working in libreoffice. there are 2 more errors in the particular file but i will mention them separately


Steps to Reproduce:
1. open file . allow updating, accept dialogs (4 i think)
2. press on any button "open GSTR-9C..." 
3.skip unexpected symbol error
4. Skip "variable utc_Shellresult" error
5. reach the error

Actual Results:
basic syntax error

Expected Results:
no errors


Reproducible: Always


User Profile Reset: No

Additional Info:
Version: 7.5.0.3 (X86_64) / LibreOffice Community
Build ID: c21113d003cd3efa8c53188764377a8272d9d6de
CPU threads: 4; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: en-IN (en_IN); UI: en-US
Flatpak
Calc: threaded
Comment 1 johnks 2023-02-11 07:26:38 UTC
Created attachment 185311 [details]
screenshot of bug
Comment 2 johnks 2023-02-11 07:27:56 UTC
Created attachment 185312 [details]
zip contaning file

https://www.gst.gov.in/download/gstr9c
downloadable from this government website.

this website is not always accessbile from outside india and certain geographies so i am attaching the file. If you can use a VPN or are able to access the website, please download from there
Comment 3 Stéphane Guillou (stragu) 2023-02-25 11:33:28 UTC
I can confirm I get the same error on Linux on Windows.
Noting that according to the readme file, only Windows is supported.

Tested:

Version: 7.6.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: ab20dba30769a5a52830220daa347772485db6a2
CPU threads: 4; OS: Windows 10.0 Build 19045; UI render: Skia/Raster; VCL: win
Locale: en-GB (en_GB); UI: en-GB
Calc: threaded

Version: 7.5.0.3 (X86_64) / LibreOffice Community
Build ID: c21113d003cd3efa8c53188764377a8272d9d6de
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: threaded

Version: 7.0.0.3 (x64)
Build ID: 8061b3e9204bef6b321a21033174034a5e2ea88e
CPU threads: 4; OS: Windows 10.0 Build 19045; UI render: Skia/Raster; VCL: win
Locale: en-GB (en_GB); UI: en-GB
Calc: threaded

I don't get errors in MS Office:

Microsoft 365 MSO (Version 2212 Build 16.0.15928.20196) 64-bit
Comment 4 Commit Notification 2023-05-09 12:13:00 UTC
Andreas Heinisch committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/fa0a1f6462c050bdd14a4f75589eb324c6575a91

tdf#153543 - Add vba shell constants

It will be available in 7.6.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Commit Notification 2023-05-09 14:15:15 UTC
Andreas Heinisch committed a patch related to this issue.
It has been pushed to "libreoffice-7-5":

https://git.libreoffice.org/core/commit/b15035870c0be5fc855904ba3750b38d68abb1ae

tdf#153543 - Add vba shell constants

It will be available in 7.5.4.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.