tdf#153543 - Add vba shell constants

Change-Id: Ifa73050f6892ce8ce95d16dedc166e68d1809491
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/151567
Tested-by: Jenkins
Reviewed-by: Andreas Heinisch <andreas.heinisch@yahoo.de>
(cherry picked from commit fa0a1f6462c050bdd14a4f75589eb324c6575a91)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/151522
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>